--- a/JavaScript/数据类型.md
+++ b/JavaScript/数据类型.md
@@ -23,7 +23,7 @@ JavaScript 是一种弱类型或者说动态语言
 
 ## Q使用typeof能得到哪些类型
 
-- ypeof 运算符可以帮助你查询变量的类型,返回一个字符串，表示未经计算的操作数的类型。
+- typeof 运算符可以帮助你查询变量的类型,返回一个字符串，表示未经计算的操作数的类型。
 - 具体对应：
   - Undefined -> undefined
   - Null -> object
