--- a/JavaScript/作用域与变量常量函数的声明与闭包.md
+++ b/JavaScript/作用域与变量常量函数的声明与闭包.md
@@ -191,7 +191,28 @@ let i = 10;
 
 ## 函数
 
-  [函数](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions)可以被有条件来声明，这意味着，在一个 if 语句里，函数声明是可以嵌套的。**有的浏览器会将这种有条件的声明看成是无条件的声明**
+  [函数](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions)
+  
+  函数可以在条件语句中声明，这意味着，在一个 if 语句里，函数声明是可以嵌套的。**有的浏览器会将这种有条件的声明看成是无条件的声明**,无论这里的条件是true还是false，浏览器都会创建函数。因此，不要通过条件来直接声明函数，如惰性载入可以在条件语句下通过[函数表达式](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/function)创建：
+  ```js
+  var hoisted = "foo" in this;
+  console.log(`'foo' name ${hoisted ? "is" : "is not"} hoisted. typeof foo is ${typeof foo}`);
+  if (true) {
+    function foo(){ return 1; }
+  }
+
+  // 在Chrome里: 
+  // 'foo' 变量名被提升，但是 typeof foo 为 undefined 
+  // 
+  // 在Firefox里: 
+  // 'foo' 变量名被提升. 但是 typeof foo 为 undefined 
+  // 
+  // 在Edge里: 
+  // 'foo' 变量名未被提升. 而且 typeof foo 为 undefined 
+  // 
+  // 在Safari里: 
+  // 'foo' 变量名被提升. 而且 typeof foo 为 function
+  ```
 
 ### 函数声明提升
 
