--- a/JavaScript/作用域与变量常量函数的声明与闭包.md
+++ b/JavaScript/作用域与变量常量函数的声明与闭包.md
@@ -108,7 +108,7 @@
 
 [let](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/let) 语句声明一个**块级作用域**的声明的变量作用域被限制在其声明的块级中。
 
-[为什么选let作为关键字](https://stackoverflow.com/questions/37916940/why-was-the-name-let-chosen-for-block-scoped-variable-declarations-in-javascri)
+[为什么选let作为这个变量名称](https://stackoverflow.com/questions/37916940/why-was-the-name-let-chosen-for-block-scoped-variable-declarations-in-javascri)
 
 - let vs var
   - 用在块级作用域中时, let将变量的作用域限制在块内, 而var声明的变量的作用域是在函数内.
