执行上下文

--- a/JavaScript/作用域与变量常量函数的声明与闭包.md
+++ b/JavaScript/作用域与变量常量函数的声明与闭包.md
@@ -1,5 +1,7 @@
 # 定义
 
+这些概念在[执行上下文](./执行上下文.md)中有展开讲解
+
 - [作用域](https://github.com/getify/You-Dont-Know-JS/tree/2nd-ed/scope-closures)
   - [Lexical Scope](https://github.com/getify/You-Dont-Know-JS/blob/2nd-ed/scope-closures/ch2.md)词法作用域(lexical scoping)，也就是静态作用域,作用域在定义的时候就决定,动态作用域在调用的时候才决定的。
   - [block-scope](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/statements/block)（或其他语言的复合语句）用于组合零个或多个语句。该块由一对大括号界定，可以是labelled：
@@ -8,7 +10,7 @@
 
     LabelIdentifier: { StatementList }
     ```
-  - 函数块
+  - 函数块： 函数生效范围内的区块
   - [执行上下文](https://tc39.es/ecma262/#running-execution-context)
 - [Hoisting](https://developer.mozilla.org/zh-CN/docs/Glossary/Hoisting)
 
@@ -243,7 +245,7 @@ var notHoisted = function() {
 
 ### 前置知识
 
-不详细展开
+这些概念在[执行上下文](./执行上下文.md)中有展开讲解
 
 - 执行上下文
 
