--- a/JavaScript/执行上下文.md
+++ b/JavaScript/执行上下文.md
@@ -1,3 +1,7 @@
+# 大纲
+
+![](../assets/Context.svg)
+
 ##
 
 本次书写规范依据最新的ECMA262-11th edition (June 2020),在ES5中，创建分为了三大部分，而今创建分为了两大部分，而且componet的数量也发生了变化，主要从sec中理解到“执行上下文”是什么便可，具体实现不追究，词法环境是一个逻辑化的概念，并不指意在代码实现上直接展示出来。
