--- a/JavaScript/执行上下文.md
+++ b/JavaScript/执行上下文.md
@@ -1,18 +1,33 @@
 # 大纲
 
-![](../assets/Context.svg)
+![上下文思维导图](../assets/Context.png)
+
+主看思维导图，MD只是简略描述
 
 ##
 
-本次书写规范依据最新的ECMA262-11th edition (June 2020),在ES5中，创建分为了三大部分，而今创建分为了两大部分，而且componet的数量也发生了变化，主要从sec中理解到“执行上下文”是什么便可，具体实现不追究，词法环境是一个逻辑化的概念，并不指意在代码实现上直接展示出来。
+本次书写规范依据最新的ECMA262-11th edition (June 2020),在ES5中，创建分为了三大部分，而今创建分为了两大部分，而且componet的数量也发生了变化，主要从sec中理解到“执行上下文”是什么便可，具体实现不追究，下面都是逻辑化的概念，并不指意在代码实现上直接展示出来。
 
 A Lexical Environment is created behind the scenes. It’s just a logistical concept. There is no way to actually access it from your JavaScript code.
 
-## 作用域
+## Lexical Environments(词法环境)
 
-作用域是当前上下文中，按照具体规则能够访问到的标识符（变量）的范围,作用域共有两种主要的工作模型。第一种是最为普遍的，被大多数编程语言所采用的词法作用域，另外一种叫作动态作用域，仍有一些编程语言在使用（比如Bash脚本、Perl中的一些模式等）。
+  用于根据ECMAScript代码的词法嵌套结构来定义标识符与特定变量和函数的关联。每次代码运行都会产生词法环境，**词法环境就是一种标识符—变量映射的结构**(这里的标识符指的是变量/函数的名字，变量是对实际对象[包含函数和数组类型的对象]或基础数据类型的引用)
 
-词法作用域：在词法阶段的作用域。换句话说，词法作用域是由你在写代码时将变量和块作用域写在哪里来决定的，因此当词法分析器处理代码时会保持作用域不变（大部分情况下是这样的）
+  - 函数声明
+  - 块语句
+  - try catch
+
+  - 词法环境会层层嵌套
+  - global environment 是顶层，它的上层引用是`null`
+  - module environment 是Module模块的顶层，它的上层是global enviorment
+  - function environment 与函数运行的环境对应
+
+### 作用域
+
+作用域是当前上下文中，按照具体规则能够访问到的标识符（变量）的范围,作用域共有两种主要的工作模型。第一种是最为普遍的，被大多数编程语言所采用的**词法作用域**，另外一种叫作**动态作用域**，仍有一些编程语言在使用（比如Bash脚本、Perl中的一些模式等）。
+
+**词法作用域**：在词法阶段的作用域。换句话说，词法作用域是由你在写代码时将变量和块作用域写在哪里来决定的，因此当词法分析器处理代码时会保持作用域不变（大部分情况下是这样的）
 
 例子：
 ```js
@@ -44,21 +59,7 @@ bar(); // 2
  - 很据JavaScriptf作者Brendan的回复，理解为当时设计语言时太匆忙了，便丁实现就搞了个变量提升
  - 《浏览器中的JavaScript执行机制》：JavaScript代码执行过程中，需要先做变量提升。而之所以需要实现变量提升，是因为JavaScript代码在执行之前需要先编译。在编译阶段，变量和函数会被存放到变量环境中，交量的默认值会被设为undefined;在代码执行阶段，JavaScript引学会从变量环境中去查找自定义的变量和函数。
 
-### Lexical Environments
-
-  用于根据ECMAScript代码的词法嵌套结构来定义标识符与特定变量和函数的关联。每次代码运行都会产生词法环境，词法环境就是一种标识符—变量映射的结构(这里的标识符指的是变量/函数的名字，变量是对实际对象[包含函数和数组类型的对象]或基础数据类型的引用)
-
-  - 函数声明
-  - 块语句
-  - try catch
-
-  - 词法环境会层层嵌套
-  - global environment 是顶层，它的上层引用是`null`
-  - module environment 是Module模块的顶层，它的上层是global enviorment
-  - function environment 与函数运行的环境对应
-
-
-### Environment Records
+## Environment Records(环境记录)
 
  环境记录主要有两种Records：
  - Declarative Environment Records 声明性环境记录
@@ -77,7 +78,7 @@ bar(); // 2
     - `[[ThisBindingStatus]]`  lexical |initialized |uninitialized
   如果是`lexical`说明是箭头函数，没有`this`值
 
-## Execution Contexts
+## Execution Contexts(执行上下文)
 
 ### Execution context
 
@@ -88,7 +89,7 @@ bar(); // 2
  - 执行上下文一般都是通过调用栈来实现，但有些ECMAScript功能的执行上下文不是通过LIFO的栈来调用的
  - running execution context 在栈顶层的元素，每一个当前新建的都会取代之前的，把之前的压下去
 
- 每一个执行上下文都至少包含以下状态部分：
+ 最新的sec声明每一个执行上下文都至少包含以下状态部分：
 
  - code evaluation state : 执行、暂停、恢复当前执行上下文
  - Function : 如果当前执行上下文为函数对象，则值为函数对象，如果是Script 或者Module 则值为null
@@ -106,12 +107,15 @@ Environments）
 
 （GeneratorObject）
 - Generator
-### 创建
 
-执行上下文是在创建阶段被创建的，创建阶段包括以下几个方面：
+### 执行上下文的创建
 
-- 创建词法环境；
-- 创建变量环境；
+执行上下文是在创建阶段被创建的，这里只描述创建阶段的Lexical
+Environments：
+
+- 创建词法环境（LexicalEnvironment）；
+- 创建变量环境（VariableEnvironment）；
+
 因此执行上下文可以抽象为下面的形式：
 ```js
 ExecutionContext = {
@@ -119,7 +123,8 @@ ExecutionContext = {
   VariableEnvironment = <ref. to VariableEnvironment in  memory>,
 }
 ```
-环境记录对象在创建阶段也被称为变量对象(VO)，在执行阶段被称为活动对象(AO)。之所以被称为变量对象是因为此时该对象只是存储执行上下文中变量和函数声明，之后代码开始执行，变量会逐渐被初始化或是修改，然后这个对象就被称为**活动对象**
+
+tips:环境记录对象在创建阶段也被称为变量对象(VO)，在执行阶段被称为活动对象(AO)。之所以被称为变量对象是因为此时该对象只是存储执行上下文中变量和函数声明，之后代码开始执行，变量会逐渐被初始化或是修改，然后这个对象就被称为**活动对象**
 
 ### 上下文大致结构
   ```js
