原型原型链继承

--- a/JavaScript/上下文.md
+++ b/JavaScript/上下文.md
@@ -55,10 +55,6 @@ bar(); // 2
 - 由当前执行环境的变量对象（未进入执行阶段前）与上层环境的一系列活动对象组成，它保证了当前执行环境对符合访问权限的变量和函数的有序访问。
 - 当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级执行上下文的变量对象中查找，一直找到全局上下文的变量对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链。
 
-### 变量提升
- - 很据JavaScriptf作者Brendan的回复，理解为当时设计语言时太匆忙了，便丁实现就搞了个变量提升
- - 《浏览器中的JavaScript执行机制》：JavaScript代码执行过程中，需要先做变量提升。而之所以需要实现变量提升，是因为JavaScript代码在执行之前需要先编译。在编译阶段，变量和函数会被存放到变量环境中，交量的默认值会被设为undefined;在代码执行阶段，JavaScript引学会从变量环境中去查找自定义的变量和函数。
-
 ## Environment Records(环境记录)
 
  环境记录主要有两种Records：
@@ -77,6 +73,10 @@ bar(); // 2
   字段声明值：
     - `[[ThisBindingStatus]]`  lexical |initialized |uninitialized
   如果是`lexical`说明是箭头函数，没有`this`值
+
+### 变量提升
+ - 很据JavaScript作者Brendan的回复，理解为当时设计语言时太匆忙了，便丁实现就搞了个变量提升
+ - 《浏览器中的JavaScript执行机制》：JavaScript代码执行过程中，需要先做变量提升。而之所以需要实现变量提升，是因为JavaScript代码在执行之前需要先编译。在编译阶段，变量和函数会被存放到变量环境中，交量的默认值会被设为undefined;在代码执行阶段，JavaScript引学会从变量环境中去查找自定义的变量和函数。
 
 ## Execution Contexts(执行上下文)
 
