--- a/JavaScript/原型原型链.md
+++ b/JavaScript/原型原型链.md
@@ -6,15 +6,15 @@
 原型编程的主张者经常争论说基于类的语言提倡使用一个关注分类和类之间关系开发模型。与此相对，原型编程看起来提倡程序员关注一系列对象实例的行为，而之后才关心如何将这些对象划分到最近的使用方式相似的原型对象，而不是分成类。因为如此，很多基于原型的系统提倡运行时原型的修改，而只有极少数基于类的面向对象系统（比如第一个动态面向对象的系统 `Smalltalk`）允许类在程序运行时被修改。
 
 [sec中的表述](https://www.ecma-international.org/ecma-262/5.1/#sec-4.2.1)
-```
-ECMAScript does not use classes such as those in C++, Smalltalk, or Java. Instead objects may be created in various ways including via a literal notation or via constructors which create objects and then execute code that initialises all or part of them by assigning initial values to their properties. Each constructor is a function that has a property named “prototype” that is used to implement prototype-based inheritance and shared properties. Objects are created by using constructors in new expressions; for example, new Date(2009,11) creates a new Date object. Invoking a constructor without using new has consequences that depend on the constructor. For example, Date() produces a string representation of the current date and time rather than an object.
-```
-[sec对prototype的表述](https://www.ecma-international.org/ecma-262/5.1/#sec-4.3.5)：
-```
-object that provides shared properties for other objects
 
-NOTE: When a constructor creates an object, that object implicitly references the constructor’s “prototype” property for the purpose of resolving property references. The constructor’s “prototype” property can be referenced by the program expression constructor.prototype, and properties added to an object’s prototype are shared, through inheritance, by all objects sharing the prototype. Alternatively, a new object may be created with an explicitly specified prototype by using the Object.create built-in function.
-```
+> ECMAScript does not use classes such as those in C++, Smalltalk, or Java. Instead objects may be created in various ways including via a literal notation or via constructors which create objects and then execute code that initialises all or part of them by assigning initial values to their properties. Each constructor is a function that has a property named “prototype” that is used to implement prototype-based inheritance and shared properties. Objects are created by using constructors in new expressions; for example, new Date(2009,11) creates a new Date object. Invoking a constructor without using new has consequences that depend on the constructor. For example, Date() produces a string representation of the current date and time rather than an object.
+
+[sec对prototype的表述](https://www.ecma-international.org/ecma-262/5.1/#sec-4.3.5)：
+
+> object that provides shared properties for other objects
+
+> NOTE: When a constructor creates an object, that object implicitly references the constructor’s “prototype” property for the purpose of resolving property references. The constructor’s “prototype” property can be referenced by the program expression constructor.prototype, and properties added to an object’s prototype are shared, through inheritance, by all objects sharing the prototype. Alternatively, a new object may be created with an explicitly specified prototype by using the Object.create built-in function.
+
 每一个`constructor`函数都有一个`prototype`属性,用于基于原型继承和属性共享，`prototype`为其他对象提供共享属性
 根据表述，通过`constructor`创造的对象，原型指向`constructor`，在原型上的属性通过继承会被共享的,可以通过`constructor.prototype`被引用。对应到实现上，就是任意函数上的的`constructor`都有`prototype`属性
 
