--- a/JavaScript/作用域与变量常量函数的声明与闭包.md
+++ b/JavaScript/作用域与变量常量函数的声明与闭包.md
@@ -10,15 +10,24 @@
 
     LabelIdentifier: { StatementList }
     ```
-  - 函数块： 函数生效范围内的区块
+  - 函数作用域： 函数生效范围内的区块
   - [执行上下文](https://tc39.es/ecma262/#running-execution-context)
 - [Hoisting](https://developer.mozilla.org/zh-CN/docs/Glossary/Hoisting)
 
     由于变量声明（以及其他声明）总是在任意代码执行之前处理的，所以在代码中的任意位置声明变量总是等效于在代码开头声明。这意味着变量可以在声明之前使用，这个行为叫做“hoisting”。“hoisting”就像是把所有的变量声明移动到函数或者全局代码的开头位置。**提升将影响变量声明，而不会影响其值的初始化。**
 
+- ES5 只有全局作用域和函数作用域，没有块级作用域，ES6+，有了块级作用域（let const）
+
+- for循环有一个特别之处，就是设置循环变量的那部分是一个父作用域，而循环体内部是一个单独的子作用域
+```js
+for (let i = 0; i < 3; i++) {
+  let i = 'abc';
+  console.log(i);
+}
+```
 ## var
 
-  [var](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/var)声明的变量的作用域是它**当前的执行上下文**，它可以是嵌套的**函数**，或者对于声明在任何函数外的变量来说是全局。(通过**函数块**来划分):
+  [var](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/var)声明的变量的作用域只有全局作用域和函数作用域
 
   - 未声明的变量
       ```js
@@ -94,7 +103,30 @@
   // x 是全局变量。
   // y 是隐式声明的全局变量。 
   ```
+- 没有块级作用域导致的问题
+  ```js
+  var tmp = new Date();
 
+  function f() {
+    console.log(tmp);
+    if (false) {
+      var tmp = 'hello world';
+    }
+  }
+
+  f(); // undefined
+  // if代码块的外部使用外层的tmp变量，内部使用内层的tmp变量。但是，函数f执行后，输出结果为undefined，原因在于变量提升，导致内层的tmp变量覆盖了外层的tmp变量
+  ```
+  ```js
+  var s = 'hello';
+
+  for (var i = 0; i < s.length; i++) {
+    console.log(s[i]);
+  }
+
+  console.log(i); // 5
+  // 循环结束后，它并没有消失，泄露成了全局变量
+  ```
 ## let 和 const
 
 [sec-let-and-const-declarations](https://tc39.es/ecma262/#sec-let-and-const-declarations)
@@ -103,7 +135,8 @@
 - 在一个有效作用域内都不可重复声明
 - **不会**在全局声明时（在最顶部的范围）创建`window` 对象的属性
 - 暂时性死区
-
+- 在块级作用域生效
+- 参数作用域会带入函数体，所以参数已经声明的变量，函数体内不得再次声明。
 ### let
 
 [let](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/let) 语句声明一个**块级作用域**的声明的变量作用域被限制在其声明的块级中。
@@ -111,7 +144,7 @@
 [为什么选let作为这个变量名称](https://stackoverflow.com/questions/37916940/why-was-the-name-let-chosen-for-block-scoped-variable-declarations-in-javascri)
 
 - `let` vs `var`
-  - 用在块级作用域中时, `let`将变量的作用域限制在块内, 而`var`声明的变量的作用域是在函数内.
+  - 用在块级作用域中时, `let`将变量的作用域限制在块内
     ```js
     var a = 1;
     var b = 2;
@@ -137,12 +170,23 @@
     ```
 ### const
 
-[const](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/const)常量也是块级作用域，
-const声明创建一个值的只读引用。但这并不意味着它所持有的值是不可变的，只是变量标识符不能重新分配。一个常量不能和它所在作用域内的其他变量或函数拥有相同的名称。
+[const](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/const)
+声明创建一个值的只读引用，一旦声明变量，就必须立即初始化。但**这并不意味着它所持有的值是不可变的，只是变量标识符不能重新分配**。一个常量不能和它所在作用域内的其他变量或函数拥有相同的名称。
 
+`const`实际上保证的，并不是变量的值不得改动，而是变量指向的那个内存地址所保存的数据不得改动。对于简单类型的数据（数值、字符串、布尔值），值就保存在变量指向的那个内存地址，因此等同于常量。但对于复合类型的数据（主要是对象和数组），变量指向的内存地址，保存的只是一个指向实际数据的指针，`const`只能保证这个指针是固定的（即总是指向另一个固定的地址），至于它指向的数据结构是不是可变的，就完全不能控制了。因此，将一个对象声明为常量必须非常小心。
+```js
+const foo = {};
+
+// 为 foo 添加一个属性，可以成功
+foo.prop = 123;
+foo.prop // 123
+
+// 将 foo 指向另一个对象，就会报错
+foo = {}; // TypeError: "foo" is read-only
+```
 ### 暂时性死区
 
-- 与通过  `var` 声明的有初始化值 `undefined` 的变量不同，通过 `let` 声明的变量直到它们的定义被执行时才初始化。在变量初始化前访问该变量会导致 `ReferenceError`。该变量处在一个自块顶部到初始化处理的“暂存死区”中。
+- 与通过  `var` 声明的有初始化值 `undefined` 的变量不同，`let` 和 `const`直到它们的定义**被执行时才初始化**。在变量初始化前访问该变量会导致 `ReferenceError`。该变量处在一个自块顶部到初始化处理的“暂存死区”中。
 
   ```js
   function do_something() {
@@ -188,12 +232,30 @@ const声明创建一个值的只读引用。但这并不意味着它所持有的
 
   go({a: [1, 2, 3]});
   ```
+### let const 会绑到顶层对象吗
 
+顶层对象的属性与全局变量挂钩，被认为是 `JavaScript` 语言最大的设计败笔之一。这样的设计带来了几个很大的问题，首先是没法在编译时就报出变量未声明的错误，只有运行时才能知道（因为全局变量可能是顶层对象的属性创造的，而属性的创造是动态的）；其次，程序员很容易不知不觉地就创建了全局变量（比如打字出错）；最后，顶层对象的属性是到处可以读写的，这非常不利于模块化编程。另一方面，`window`对象有实体含义，指的是浏览器的窗口对象，顶层对象是一个有实体含义的对象，也是不合适的。
+
+`ES6` 为了改变这一点，一方面规定，为了保持兼容性，`var`命令和`function`命令声明的全局变量，依旧是顶层对象的属性；另一方面规定，`let`命令、`const`命令、`class`命令声明的全局变量，不属于顶层对象的属性。
+```js
+var a = 1;
+// 或者采用通用方法，写成 this.a
+window.a // 1
+
+let b = 1;
+window.b // undefined
+```
 ## 函数
 
   [函数](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions)
   
-  函数可以在条件语句中声明，这意味着，在一个 `if` 语句里，函数声明是可以嵌套的。**有的浏览器会将这种有条件的声明看成是无条件的声明**,无论这里的条件是`true`还是`false`，浏览器都会创建函数。因此，不要通过条件来直接声明函数，如惰性载入可以在条件语句下通过[函数表达式](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/function)创建：
+  函数可以在条件语句中声明，这意味着，在一个 `if` 语句里，函数声明是可以嵌套的。**[有的浏览器会将这种有条件的声明看成是无条件的声明](https://www.ecma-international.org/ecma-262/6.0/index.html#sec-block-level-function-declarations-web-legacy-compatibility-semantics)**,无论这里的条件是`true`还是`false`，浏览器都会创建函数。
+  
+  - 允许在块级作用域内声明函数。
+  - 函数声明类似于var，即会提升到全局作用域或函数作用域的头部。
+  - 同时，函数声明还会提升到所在的块级作用域的头部。
+
+因此，不要通过条件来直接声明函数，如惰性载入可以在条件语句下通过[函数表达式](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/function)创建：
   ```js
   var hoisted = "foo" in this;
   console.log(`'foo' name ${hoisted ? "is" : "is not"} hoisted. typeof foo is ${typeof foo}`);
