--- a/JavaScript/原型原型链.md
+++ b/JavaScript/原型原型链.md
@@ -84,7 +84,7 @@ console.log(shape.__proto__ === circle); // true
 [图解](https://www.ecma-international.org/ecma-262/5.1/#sec-4.2.1)：
   `CF`是一个构造函数（也是一个对象）。通过 `new` 创建了五个对象：`cf1、cf2、cf3、cf4和cf5`。 五个对象都包含名为`q1`和`q2`的属性。虚线代表隐式原型关系；所以，例如，`cf3`的原型是`CFp`。构造函数`CF`本身有两个属性，分别命名为`p1`和`p2`，它两对`cfp、cf1、cf2、cf3、cf4和cf5`来说都是不可见的，`CFp`中命名为`CFP1`的属性被`cf1、cf2、cf3、cf4和cf5`共享（但不被`CF`共享），在`CFp`的隐式原型链中发现的任何没有命名为`q1、q2`,`CFP1`的属性也是如此。注意`CF`和`CFp`之间没有隐式原型链。
 
-  不同基于类对象的语言，属性能够通过赋值而被动态的添加上去，因此构造函数不需要给所有被构造出的函数的属性赋值命名。只需要在构造函数就行在`CFp`中添加属性就能够被`cf1, cf2, cf3, cf4, 和 cf5` 共享
+  不同基于类对象的语言，JS中属性可以动态添加上去，因此构造函数不需要给所有被构造出的函数的属性赋值命名。只需要在构造函数就行在`CFp`中添加属性就能够被`cf1, cf2, cf3, cf4, 和 cf5` 共享
 
 下面通过代码分析：
 
